package ex44;


public class Product {
    private String name;
    private Double price;
    private Integer quantity;

    //Getter function for the name
    public String getName() {
        return name;
    }

    //Setter function for the price
    public void setName(String name) {
        this.name = name;
    }

    //Getter function for the price
    public Double getPrice() {
        return price;
    }

    //Setter function for the price
    public void setPrice(Double price) {
        this.price = price;
    }

    //Getter function for the quantity
    public Integer getQuantity() {
        return quantity;
    }

    //Setter function for the price
    public void setQuantity(Integer quantity) {
        this.quantity = quantity;
    }

}
