package ex44;

import java.util.List;

public class Result {
    private List<Product> products = null;

    //Getter function for the list of products in result
    public List<Product> getProducts() {
        return products;
    }

    //Setter function for the list of products in result
    public void setProducts(List<Product> products) {
        this.products = products;
    }

}